Adds changes for .ioc CAN configuration

--- a/IIoT.ioc
+++ b/IIoT.ioc
@@ -2,17 +2,26 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+CAN.BS1=CAN_BS1_9TQ
+CAN.BS2=CAN_BS2_6TQ
+CAN.CalculateBaudRate=250000
+CAN.CalculateTimeBit=4000
+CAN.CalculateTimeQuantum=250.0
+CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2,Mode
+CAN.Mode=CAN_MODE_LOOPBACK
+CAN.Prescaler=9
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F303ZET6
 Mcu.Family=STM32F3
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=RTC
-Mcu.IP3=SYS
-Mcu.IP4=USART3
-Mcu.IP5=USB
-Mcu.IPNb=6
+Mcu.IP0=CAN
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=RTC
+Mcu.IP4=SYS
+Mcu.IP5=USART3
+Mcu.IP6=USB
+Mcu.IPNb=7
 Mcu.Name=STM32F303Z(D-E)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -23,8 +32,10 @@ Mcu.Pin12=PA13
 Mcu.Pin13=PA14
 Mcu.Pin14=PB3
 Mcu.Pin15=PB7
-Mcu.Pin16=VP_RTC_VS_RTC_Activate
-Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin16=PB8
+Mcu.Pin17=PB9
+Mcu.Pin18=VP_RTC_VS_RTC_Activate
+Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PB0
@@ -33,7 +44,7 @@ Mcu.Pin6=PD8
 Mcu.Pin7=PD9
 Mcu.Pin8=PG6
 Mcu.Pin9=PG7
-Mcu.PinsNb=18
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303ZETx
@@ -49,7 +60,6 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
-NVIC.USB_LP_CAN_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA11.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=USB_DM
@@ -87,6 +97,12 @@ PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2 [Blue]
 PB7.Locked=true
 PB7.Signal=GPIO_Output
+PB8.Locked=true
+PB8.Mode=CAN_Activate
+PB8.Signal=CAN_RX
+PB9.Locked=true
+PB9.Mode=CAN_Activate
+PB9.Signal=CAN_TX
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=USER_Btn [B1]
 PC13.Locked=true
@@ -125,7 +141,7 @@ ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
+ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
@@ -151,7 +167,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_PCD_Init-USB-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_PCD_Init-USB-false-HAL-true,6-MX_CAN_Init-CAN-false-HAL-true
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
 RCC.AHBFreq_Value=72000000
