Adds CAN_MODE_NORMAL to IOC Configuration

--- a/IIoT.ioc
+++ b/IIoT.ioc
@@ -8,7 +8,7 @@ CAN.CalculateBaudRate=250000
 CAN.CalculateTimeBit=4000
 CAN.CalculateTimeQuantum=250.0
 CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2,Mode
-CAN.Mode=CAN_MODE_LOOPBACK
+CAN.Mode=CAN_MODE_NORMAL
 CAN.Prescaler=9
 File.Version=6
 KeepUserPlacement=false
